﻿$Rev$
[2007/08/25]
DirBrowser.py SvnSupport.py mRun.py
                    Add refreshing current folder functionality after the svn 
                    command finished
mSearch.py          Fix Ctrl+B bug. The position is not the right, it's less 1.
svn_plugin          Make svn support a plugin, so if you want to use svn, you
                    should enable the svn_plugin first.
                    
[2007/08/24]
Editor.py           Add Ctrl+Insret => Copy, and add Ctrl+C, Ctrl+X, Ctrl+Y to
                    Editor.py I don't if it'll fix the problem in linux
mView.py            Change long line indicator default is true.
InputAssistant.py SnipMixin.py mInputAssistant.py
                    Fix snippet template indent bug(when using tab mode, the '\t'
                    in template will be replaced with spaces). And you can press
                    ESC to cancel current snippet.
SvnSupport.py mVersionControl.py mRun.py Entry.py
                    Add simple SVN support, and also many things need to finish.
                    
[2007/08/23]
UliPad.py           Now you can set pythonpath option in config.ini/[default], 
                    and ulipad will insert it into the sys.path. pythonpath can 
                    be a string or a string list of directory.
                    
mDebug.py packages  Move winpdb package from modules to packages, fix setup
                    file bug and change the winpdb invoke
Print.py            Fix print margin
                    
[2007/08/22]
Editor.py           Add Shift+Delete => Cut, Shift+Insert => Paste
mPyRun.py           Add new option in preference, [Python]->Automatically save modified file when running python program, if it's checked, it'll automatically save the modified file.
common.py LexerBase.py Fix print bug
mPrint.py Print.py  Fix print bug, add print line number functionality

[2007/08/21]
mako_plugin         Add mako template syntax highlight support
